Change the UI of the calculator

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!--This is to hold all the divs in calculator-->
     <div class="container">
-
+        <!-- 
         <div class="display">
 
             <label>Operation:
@@ -31,11 +31,59 @@
         </div>
 
         <div class="buttonBox">
-            <button id="add"> add </button>
-            <button class="subtract"> subtract </button>
-            <button class="multiply"> multiply </button>
-            <button class="divide"> divide </button>
-            <button class="equals"> = </button>
+            <button id="buttons"> + </button>
+            <button id="buttons"> - </button>
+            <button id="buttons"> * </button>
+            <button id="buttons"> / </button>
+            <button id="equal"> = </button>
+        </div>
+
+-->
+        <div class=calc>
+            <div class="display">
+                <div id="up"></div>
+                <div id="down">0</div>
+            </div>
+
+            <div class="buttonsTop">
+                <!--4 buttons here-->
+                <button>sqr</button>
+                <button>x^2</button>
+                <button>C</button>
+                <button>Del</button>
+            </div>
+
+            <div class="buttonsBottom">
+                <div class="buttonsLeft">
+                    <!--numbered buttons -->
+                    <button>7</button>
+                    <button>8</button>
+                    <button>9</button>
+
+                    <button>4</button>
+                    <button>5</button>
+                    <button>6</button>
+
+                    <button>1</button>
+                    <button>2</button>
+                    <button>3</button>
+
+                    <button>0</button>
+                    <button>.</button>
+                    <button>=</button>
+                </div>
+                <div class="buttonsRight">
+                    <!--numbered buttons -->
+                    <button>+</button>
+                    <button>-</button>
+                    <button>*</button>
+                    <button>/</button>
+                </div>
+            </div>
+
+
+
+
         </div>
 
 
