Add fully functional operationg functions with responsive UI

--- a/index.html
+++ b/index.html
@@ -41,43 +41,44 @@
 -->
         <div class=calc>
             <div class="display">
-                <div id="up"></div>
-                <div id="down">0</div>
+                <div class="up" id="displayUp"></div>
+                <div class="down" id="displayDown"></div>
             </div>
 
             <div class="buttonsTop">
                 <!--4 buttons here-->
                 <button>sqr</button>
                 <button>x^2</button>
-                <button>C</button>
-                <button>Del</button>
+                <button id="clear">C</button>
+                <button id="del">Del</button>
             </div>
 
             <div class="buttonsBottom">
                 <div class="buttonsLeft">
                     <!--numbered buttons -->
-                    <button>7</button>
-                    <button>8</button>
-                    <button>9</button>
+                    <button id="numberPad">7</button>
+                    <button id="numberPad">8</button>
+                    <button id="numberPad">9</button>
 
-                    <button>4</button>
-                    <button>5</button>
-                    <button>6</button>
+                    <button id="numberPad">4</button>
+                    <button id="numberPad">5</button>
+                    <button id="numberPad">6</button>
 
-                    <button>1</button>
-                    <button>2</button>
-                    <button>3</button>
+                    <button id="numberPad">1</button>
+                    <button id="numberPad">2</button>
+                    <button id="numberPad">3</button>
 
-                    <button>0</button>
-                    <button>.</button>
-                    <button>=</button>
+
+                    <button id="numberPad">.</button>
+                    <button id="numberPad">0</button>
+                    <button id="equal">=</button>
                 </div>
                 <div class="buttonsRight">
                     <!--numbered buttons -->
-                    <button>+</button>
-                    <button>-</button>
-                    <button>*</button>
-                    <button>/</button>
+                    <button class="biggerFont" id="operator"> / </button>
+                    <button class="biggerFont" id="operator"> x </button>
+                    <button class="biggerFont" id="operator"> - </button>
+                    <button class="biggerFont" id="operator"> + </button>
                 </div>
             </div>
 
